Fix path on windows